[package]
name = "readwrite-ufo-glif"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Nikolaus Waxweiler <madigens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "readwrite_ufo_glif"
crate-type = ["cdylib"]

[dependencies]
norad = { version = "0.4", features = ["rayon"] }
pyo3 = { version = "0.13.2", features = ["extension-module"] }
plist = "1"
serde = { version =  "1.0", features = ["derive"] }
serde-pickle = "0.6"
serde_json = "1.0"

[profile.release]
debug = true
